# app/Http/Controllers/Oauth/AuthController.php
@@ -12,12 +12,77 @@ use App\Models\Siga\Ruta;
 use Illuminate\Support\Facades\DB;
 use App\Models\Siga\Consumidor;
 //</PRUEBAS>//
-
+/**
+ * @OA\Tag(
+ *     name="Autenticación",
+ *     description="Rutas utilizadas para la autenticacion."
+ * )
+ */
 class AuthController extends Controller
 {
+/**
+ * Obtener informacion del propietario del token.
+ * @OA\Get(
+ *     path="/api/me",
+ *     summary="Obtener mi informacion.",
+ *     security={{"apiAuth":{}}},
+ *     tags={"Autenticación"},
+ *     @OA\Response(
+ *         response="200",
+ *         description="OK",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 @OA\Property(
+ *                     property="data",
+ *                     type="object",
+ *                     @OA\Property(
+ *                         property="id",
+ *                         type="string",
+ *                         example="9da77c25-1bd1-4672-a9be-656f60615a39"
+ *                     ),
+ *                     @OA\Property(
+ *                         property="name",
+ *                         type="string",
+ *                         example="John Doe"
+ *                     ),
+ *                     @OA\Property(
+ *                         property="email",
+ *                         type="string",
+ *                         example="johndoe@example.com"
+ *                     ),
+ *                     @OA\Property(
+ *                         property="rol",
+ *                         type="string",
+ *                         example="admin"
+ *                     )
+ *                 )
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="500",
+ *         description="Error interno del servidor. Por favor, intenta de nuevo o reporta al administrador.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Error interno del servidor"}
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="404",
+ *         description="Recurso no encontrado.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Not found."}
+ *         )
+ *     )
+ * )
+ */
+    
     public function me(Request $request){
         $user = $request->user();
-        return response()->json(["data" => [
+        return response()->json(data: ["data" => [
             'id' => $user->id,
             'name' => $user->name,
             'email' => $user->email,
@@ -36,6 +101,39 @@ class AuthController extends Controller
 
         return back()->withErrors(['error' => 'Invalid username or password']);
     }
+/**
+ * Obtener informacion del propietario del token.
+ * @OA\Get(
+ *     path="/api/logout",
+ *     summary="Obtener mi informacion.",
+ *     security={{"apiAuth":{}}},
+ *     tags={"Autenticación"},
+ *     @OA\Response(
+ *         response="200",
+ *         description="Sesion cerrada correctamente.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"message": "Token y Sesion removidos correctamente"}
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="500",
+ *         description="Error interno del servidor. Por favor, intenta de nuevo o reporta al administrador.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Error interno del servidor"}
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="404",
+ *         description="Recurso no encontrado.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Not found."}
+ *         )
+ *     )
+ * )
+ */
     public function logout(){
         $user = auth()->user();
         $token = $user->token();
@@ -47,7 +145,7 @@ class AuthController extends Controller
         // Eliminar las cookies
         $cookie = cookie()->forget('XSRF-TOKEN');
         $cookie2 = cookie()->forget('laravel_session');
-        return response()->json(['message' => $user], 200)->withCookie($cookie)->withCookie($cookie2);;
+        return response()->json(['message' => "Token y Sesion removidos correctamente"], 200)->withCookie($cookie)->withCookie($cookie2);;
     }
 
     public function register(Request $request){
@@ -66,6 +164,54 @@ class AuthController extends Controller
 
         return redirect('login')->withErrors(['success' => 'Successfully registered.']);
     }
+/**
+ * Validar el acceso del usuario.
+ * @OA\Get(
+ *     path="/api/check",
+ *     summary="Validar el acceso de un usuario a una ruta.",
+ *     security={{"apiAuth":{}}},
+ *     tags={"Autenticación"},
+ *     @OA\Parameter(
+ *         name="ruta",
+ *         in="query",
+ *         required=true,
+ *         description="Nombre de la ruta a validar.",
+ *         example="/api/alumnos"
+ *     ),
+ *     @OA\Response(
+ *         response="200",
+ *         description="Sesion cerrada correctamente.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"Consumidor": "L20390000@chetumal.tecnm.mx"}
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="500",
+ *         description="Error interno del servidor. Por favor, intenta de nuevo o reporta al administrador.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Error interno del servidor"}
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="404",
+ *         description="Recurso no encontrado.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Not found."}
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response="403",
+ *         description="Recurso no encontrado.",
+ *         @OA\MediaType(
+ *             mediaType="application/vnd.api+json",
+ *             example={"error": "Access denied: Permiso necesario no encontrado"}
+ *         )
+ *     )
+ * )
+ */
     public function auth_consumer(Request $request){
         $jwtPayload = $request->bearerToken(); // Obtener el token JWT
 
@@ -96,6 +242,6 @@ class AuthController extends Controller
         //SI TIENE EL SCOPE NECESARIO PARA ACCEDER A LA RUTA
         return response()->json([
             'Consumidor' => $consumer->getPropietario->email, // Propietario del consumidor
-        ], ($scopeExists) ? 200 : 401);
+        ],  200);
     }
 }
